# rtorrenty

./: Cargo.toml  README.md  config.toml  todo.md
src/: config.toml  main.rs  rtorrenty_cli.rs  rtorrenty_logic.rs
testTorrent/: debian-13.1.0-amd64-netinst.iso.torrent
